// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`happy path 1`] = `
<div
  className="flex-100 layout-row trucking_details"
>
  <div
    className="carriage_sec flex-100 layout-row layout-align-end-end"
  >
    <div
      className="
          form_group 
          flex-100
          layout-row layout-align-end-end
        "
      data-for="UUID_MOCK_KEY_0"
      data-tip="Side Lifter is not available for the given address."
    >
      <div
        className=""
      />
      <input
        checked={false}
        disabled={false}
        id="TARGET-side_lifter"
        name="TARGETTruck"
        onChange={null}
        type="radio"
        value="TARGETTruck"
      />
      <label
        htmlFor="TARGET-side_lifter"
      >
        Side Lifter
      </label>
      <Tooltip
        color="white"
        icon="fa-info-circle"
        text="side_lifter"
        theme={
          Object {
            "background": "https://assets.itsmycargo.com/assets/images/cropped_banner_2.jpg",
            "colors": Object {
              "brightPrimary": "#2491FD",
              "brightSecondary": "#25ED36",
              "primary": "#0D5BA9",
              "secondary": "#23802A",
            },
            "logoLarge": "https://assets.itsmycargo.com/assets/logos/logo_box.png",
            "logoSmall": "https://assets.itsmycargo.com/assets/logos/logo_box.png",
            "logoWhite": "https://assets.itsmycargo.com/assets/logos/Logo_transparent_white.png",
            "logoWide": "https://assets.itsmycargo.com/assets/logos/Logo_transparent_blue.png",
          }
        }
        toolText=""
        wrapperClassName="tooltip"
      />
    </div>
    <div
      className="
          form_group 
          flex-100
          layout-row layout-align-end-end
        "
      data-for="UUID_MOCK_KEY_1"
      data-tip="Chassis is not available for the given address."
    >
      <div
        className=""
      />
      <input
        checked={true}
        disabled={false}
        id="TARGET-chassis"
        name="TARGETTruck"
        onChange={null}
        type="radio"
        value="TARGETTruck"
      />
      <label
        htmlFor="TARGET-chassis"
      >
        Chassis
      </label>
      <Tooltip
        color="white"
        icon="fa-info-circle"
        text="chassis"
        theme={
          Object {
            "background": "https://assets.itsmycargo.com/assets/images/cropped_banner_2.jpg",
            "colors": Object {
              "brightPrimary": "#2491FD",
              "brightSecondary": "#25ED36",
              "primary": "#0D5BA9",
              "secondary": "#23802A",
            },
            "logoLarge": "https://assets.itsmycargo.com/assets/logos/logo_box.png",
            "logoSmall": "https://assets.itsmycargo.com/assets/logos/logo_box.png",
            "logoWhite": "https://assets.itsmycargo.com/assets/logos/Logo_transparent_white.png",
            "logoWide": "https://assets.itsmycargo.com/assets/logos/Logo_transparent_blue.png",
          }
        }
        toolText=""
        wrapperClassName="tooltip"
      />
    </div>
  </div>
</div>
`;

exports[`hide is true 1`] = `""`;

exports[`target truck type is not part of truckTypes 1`] = `
<div
  className="flex-100 layout-row trucking_details"
>
  <div
    className="carriage_sec flex-100 layout-row layout-align-end-end"
  >
    <div
      className="
          form_group disabled
          flex-100
          layout-row layout-align-end-end
        "
      data-for="UUID_MOCK_KEY_2"
      data-tip="Side Lifter is not available for the given address."
    >
      <ReactTooltip
        effect="solid"
        id="UUID_MOCK_KEY_2"
        insecure={true}
        place="bottom"
        resizeHide={true}
        wrapper="div"
      />
      <div
        className="overlay"
      />
      <input
        checked={false}
        disabled={true}
        id="TARGET-side_lifter"
        name="TARGETTruck"
        onChange={null}
        type="radio"
        value="TARGETTruck"
      />
      <label
        htmlFor="TARGET-side_lifter"
      >
        Side Lifter
      </label>
      <Tooltip
        color="white"
        icon="fa-info-circle"
        text="side_lifter"
        theme={
          Object {
            "background": "https://assets.itsmycargo.com/assets/images/cropped_banner_2.jpg",
            "colors": Object {
              "brightPrimary": "#2491FD",
              "brightSecondary": "#25ED36",
              "primary": "#0D5BA9",
              "secondary": "#23802A",
            },
            "logoLarge": "https://assets.itsmycargo.com/assets/logos/logo_box.png",
            "logoSmall": "https://assets.itsmycargo.com/assets/logos/logo_box.png",
            "logoWhite": "https://assets.itsmycargo.com/assets/logos/Logo_transparent_white.png",
            "logoWide": "https://assets.itsmycargo.com/assets/logos/Logo_transparent_blue.png",
          }
        }
        toolText=""
        wrapperClassName="tooltip"
      />
    </div>
    <div
      className="
          form_group disabled
          flex-100
          layout-row layout-align-end-end
        "
      data-for="UUID_MOCK_KEY_3"
      data-tip="Chassis is not available for the given address."
    >
      <ReactTooltip
        effect="solid"
        id="UUID_MOCK_KEY_3"
        insecure={true}
        place="bottom"
        resizeHide={true}
        wrapper="div"
      />
      <div
        className="overlay"
      />
      <input
        checked={true}
        disabled={true}
        id="TARGET-chassis"
        name="TARGETTruck"
        onChange={null}
        type="radio"
        value="TARGETTruck"
      />
      <label
        htmlFor="TARGET-chassis"
      >
        Chassis
      </label>
      <Tooltip
        color="white"
        icon="fa-info-circle"
        text="chassis"
        theme={
          Object {
            "background": "https://assets.itsmycargo.com/assets/images/cropped_banner_2.jpg",
            "colors": Object {
              "brightPrimary": "#2491FD",
              "brightSecondary": "#25ED36",
              "primary": "#0D5BA9",
              "secondary": "#23802A",
            },
            "logoLarge": "https://assets.itsmycargo.com/assets/logos/logo_box.png",
            "logoSmall": "https://assets.itsmycargo.com/assets/logos/logo_box.png",
            "logoWhite": "https://assets.itsmycargo.com/assets/logos/Logo_transparent_white.png",
            "logoWide": "https://assets.itsmycargo.com/assets/logos/Logo_transparent_blue.png",
          }
        }
        toolText=""
        wrapperClassName="tooltip"
      />
    </div>
  </div>
</div>
`;

exports[`truckTypes is falsy 1`] = `""`;
